--- a/css/theme/default-blue.css
+++ b/css/theme/default-blue.css
@@ -15,13 +15,13 @@
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1c1e20;
-  background: -moz-radial-gradient(center, circle cover, #005580 0%, #1c1e20 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #005580), color-stop(100%, #1c1e20));
-  background: -webkit-radial-gradient(center, circle cover, #005580 0%, #1c1e20 100%);
-  background: -o-radial-gradient(center, circle cover, #005580 0%, #1c1e20 100%);
-  background: -ms-radial-gradient(center, circle cover, #005580 0%, #1c1e20 100%);
-  background: radial-gradient(center, circle cover, #005580 0%, #1c1e20 100%);
+  background: #000000;
+  background: -moz-radial-gradient(center, circle cover, #002030 0%, #000000 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #002030), color-stop(100%, #000000));
+  background: -webkit-radial-gradient(center, circle cover, #002030 0%, #000000 100%);
+  background: -o-radial-gradient(center, circle cover, #002030 0%, #000000 100%);
+  background: -ms-radial-gradient(center, circle cover, #002030 0%, #000000 100%);
+  background: radial-gradient(center, circle cover, #002030 0%, #000000 100%);
   background-color: #2b2b2b; }
 
 .reveal {
